# Accessory

./: AdkEcho.cpp  CMakeLists.txt  accessory_mode.c  accessory_mode.cpp
AOA/: AOA.cpp  AOA.h
include/: android_open_accessory.c  android_open_accessory.cpp  android_open_accessory.h  android_transporter.c  android_transporter.cpp  android_transporter.h
